--- a/README
+++ b/README
@@ -311,3 +311,4 @@ Alternate Pool: I/O  Free: 32  Cause: Not enough free memory
 -Traceback= 801ABD48 801D932C 801D9318
 
 And then, the CDP process is totally down, even when we stop the attack. No more CDP babies...
+EOF
