Changed email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 
-Alfredo Andres Omella <slay@yersinia.net>
+Alfredo Andres Omella <aandreswork@hotmail.com>
 David Barroso Berrueta <tomac@yersinia.net>
 
 http://www.yersinia.net <yersinia@yersinia.net>
