--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,8 @@
 
 Last release and CVS/SVN repository can be always accessed at
-    
-       http://www.yersinia.net
+
+        https://github.com/tomac/yersinia
+        http://www.yersinia.net
 
 
 Requirements
@@ -70,3 +71,4 @@ don't have all posible platforms (Ebay rules, but we can't afford it).
 Plz, send your comments to:
 
 yersinia@yersinia.net
+aandreswork@hotmail.com
