--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 CHANGES for Yersinia
 ====================
 
+2017/08/24
+----------
+- Version 0.8.1
+- Fixed critical bug using invalid network interfaces (appeared initially with STP MiTM attack), issue #41
+
+
 2017/08/23
 ----------
 - Version 0.8.0
