Added text to readme

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 [![Build Status](https://travis-ci.org/tomac/yersinia.svg?branch=master)](https://travis-ci.org/tomac/yersinia)
 
+This be modification of silly network tool thing
+
 Spanning Tree
 -------------
 
